docs(gaps): document five M2 gaps found in exploratory use; add NV area
Record gaps surfaced while exercising run/test/debug and the Neovim client, all
Target: M2. Identifiers are neutral placeholders (com.example.app, generic
paths) per the public-repo rule.

- TE-4 — the replay JVM's working directory does not match Maven's (the module
  basedir), so tests/main that resolve relative paths (src/test/resources/…,
  new File("target/…")) fail under replay while passing under mvn.
- TE-5 — a JPMS test module runs as a named module on the module path in replay,
  so JUnit (unnamed module) cannot reflectively open the test packages
  (@RegisterExtension, test constructors) — InaccessibleObjectException — whereas
  Surefire makes it work. Suspected placement/--add-opens fidelity gap.
- DB-5 — local inspection fails opaquely ("no local-variable table for this
  frame"). Verified Maven's default -g DOES emit the LVT, so the trigger is a
  synthetic/lambda or dependency frame, not the project's compile settings; the
  fix is a clear diagnostic (and possibly -g:vars for the debug replay).
- DB-6 — variable inspection throws InvalidStackFrameException after an
  invocation-resume: a Lathe evaluation that invokes a method momentarily resumes
  the thread and invalidates the frames java-debug cached for the Variables view.
- NV-1 — :LatheStart is unreachable in the exact case it exists for (no Java file
  open), because the recommended install lazy-loads the plugin on ft="java" so
  setup() (which registers the command) never runs. Adds a new NV (neovim client)
  area to gaps.md and gap-process.md.

Fixes are deferred to a separate session.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>